Fix dark mode colours

--- a/src/home.scss
+++ b/src/home.scss
@@ -274,7 +274,7 @@
     }
 
     .home__links {
-      margin-bottom: 2rem;
+      margin: 1rem 0;
     }
 
     .home__scroll {
